# PhotoCameraLocator

./: CMakeLists.txt  uninstall.in_cmake
src/: CMakeLists.txt  main.cpp
src/app/: app.qrc  pclapplication.cpp  pclapplication.h  pclflagitem.cpp  pclflagitem.h  pclmainwindow.cpp  pclmainwindow.h  pclphotoscene.cpp  pclphotoscene.h  pclversion.h
src/app/icons/.svn/: all-wcprops  entries
src/app/icons/.svn/text-base/: EasyGT.svg.svn-base
src/app/icons/16/.svn/: all-wcprops  entries
src/app/icons/22/.svn/: all-wcprops  entries
src/app/icons/24/.svn/: all-wcprops  entries
src/app/splash/.svn/: all-wcprops  entries
src/app/splash/.svn/text-base/: EasyGT-Logo.png.svn-base
src/ui/: CMakeLists.txt  pclflagdialog.ui  pclmainwindowgui.ui
